# bonfida-bot

./: .gitignore  README.md  bonfida-bot.drawio
assets/: bonfida-bot.drawio
js/: README.md  package-lock.json  package.json  tsconfig.json
js/src/: index.ts  instructions.ts  main.ts  secondary_bindings.ts  state.ts  test.ts  types.ts  utils.ts
program/: Cargo.toml  Makefile
program/fuzz/: Cargo.toml  fuzz.txt
program/fuzz/src/: bonfida_bot_fuzz.rs
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  utils.rs
program/tests/: functional.rs  utils.rs
program/tests/common/: market.rs  mod.rs  pool.rs  simulation.rs  utils.rs
