[package]
name = "bonfida-bot-fuzz"
version = "0.1.0"
authors = ["Elliott Benisty <elliott@bonfida.com>", "Lucas Chaumeny <lucas@bonfida.com>"]
publish = false
edition = "2018"

[dependencies]
honggfuzz = { version = "0.5" }
arbitrary = { version = "1" }
solana-program = "1.5.6"
solana-sdk = "1.5.0"
futures = "0.3"
solana-program-test = "1.5.0"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.2", features = ["no-entrypoint"]}
bonfida-bot =  { version = "0.1.0", path="..", features=["fuzz", "no-entrypoint"] }
tokio = { version = "0.3", features = ["macros"]}

[[bin]]
name = "bonfida-bot-fuzz"
path = "src/bonfida_bot_fuzz.rs"
test = false
doc = false